--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
             "App\\": "app"
         },
         "files": [
-            "app/confg.php",
+            "app/config.php",
             "app/routes.php"
         ]
     }
